[package]
name = "sus_language_server"
version = "0.0.1"
authors = ["VonTum <lennart.vanhirtum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
tower-lsp = "0.19.0"
tokio = {version = "*", features = ["full"]}

